# engineer_projects

./: .gitignore  prepare_code_base_for_others.sh  start_all.sh
Ray_Tracer/: CMakeLists.txt  start.sh
Ray_Tracer/cmp/: compare_outputs.sh  reference_bmp_checksum.txt
Ray_Tracer/inc/: CTRL_Bmp.h  CTRL_Parallel_CPU.h  CTRL_STATS_Stat_Record.h  CTRL_STATS_stats_pack.h  CTRL_STATS_work_group.h  CTRL_Scene.h  CTRL_Scene_Controller.h  CTRL_Scene_details.h  CTRL_Scene_exe_details.h  CTRL_Setuper.h  CTRL_Timer.h  FUNC_Float_functions.h  FUNC_Random_functions.h  RT_Dimensions.h  RT_Distance_contest_spheres.h  RT_Hit_info_and_position.h  RT_Hit_sphere.h  RT_Light_calculations.h  RT_Light_point.h  RT_Object.h  RT_RGB.h  RT_RGB_float.h  RT_RGB_float_sum_and_avg.h  RT_Ray.h  RT_Renderer.h  RT_Sphere.h  _MAIN_.h  _PARSER_Format_Buffer_Common_.h  _PARSER_Format_Buffer_Common_IMP_.h  _constants_.h  _global_variables_.h  _pre_code_mode_.h  _preprocessor_.h  _shortcut_logs_.h  _type_definitions_.h
Ray_Tracer/src/: CTRL_STATS_Stat_Record.cpp  CTRL_Scene_Controller.cpp  CTRL_Setuper.cpp  CTRL_Timer.cpp  RT_Dimensions.cpp  __checksums__.txt
Ray_Tracer/src/CUDA/: CTRL_Bmp.cu  CTRL_Parallel_CPU.cu  CTRL_Scene.cu  RT_Renderer.cu  _main_.cu
Single_Operations/: CMakeLists.txt  start.sh
Single_Operations/inc/: Timer.h  _SINGLE_.h  __preprocessor__.h  benchmark_base.h  stats_pack.h  vec_add.h  vec_multi.h
Single_Operations/inc/if_statements_2/: if_statements_2_BASE.h  if_statements_2_alternating.h  if_statements_2_continuous.h  if_statements_2_random.h
Single_Operations/inc/if_statements_3/: if_statements_3_BASE.h  if_statements_3_alternating.h  if_statements_3_continuous.h  if_statements_3_random.h
Single_Operations/inc/if_statements_4/: if_statements_4_BASE.h  if_statements_4_alternating.h  if_statements_4_continuous.h  if_statements_4_random.h
Single_Operations/inc/ray_calculations/: ray_calculations_BASE.h  ray_calculations_lights_BASE.h  ray_calculations_lights_intensity_based_on_angle.h  ray_calculations_lights_intensity_based_on_angle_MANY.h  ray_calculations_lights_surface_mirror.h  ray_calculations_lights_surface_mirror_MANY.h  ray_calculations_surface_diffuse.h  ray_calculations_surface_diffuse_MANY.h
Single_Operations/inc/sphere_intersection/: sphere_intersection_BASE.h  sphere_intersection_distance_contests_MANY.h  sphere_intersection_one_distance_contest_UNUSED.h  sphere_intersection_one_sphere.h
Single_Operations/src/: Timer.cpp  __checksums__.txt  benchmark_base.cpp  vec_add.cpp
Single_Operations/src/CUDA/: main.cu  vec_multi.cu
diagrams/: Ray_Tracing.plantuml  Single_Operations.plantuml
log_filter/: CMakeLists.txt  cmp.sh  start.sh
log_filter/_inc/: __preprocessor__.h  stats_pack.h
log_filter/_src/: main.cpp
parser_to_csv/: CMakeLists.txt  Main_avg_filt_OG.csv  check_new_option.sh  cmp.sh  start.sh  tylko_struktury.git_diff
parser_to_csv/inc/: __preprocessor__.h
parser_to_csv/input/: filtered
parser_to_csv/src/: charter.py  main.cpp
